# EquationSolver

./: CMakeLists.txt  README.md  main.c
src/: GrammarChecker.c  GrammarChecker.h  Interpreter.c  Interpreter.h  Solver.c  Solver.h  Tokenizer.c  Tokenizer.h
src/model/: Equation.h  GrammarCheckResult.h  Node.h  Token.h  TokenType.h
src/simplifier/: DivisionSimplifier.c  DivisionSimplifier.h  ExponentiationSimplifier.c  ExponentiationSimplifier.h  MultiplicationSimplifier.c  MultiplicationSimplifier.h  SimplifierUtils.c  SimplifierUtils.h
tests/: CMakeLists.txt  TesExponentiationSimplifier.c  TestDivisionSimplifier.c  TestDivisionSimplifier.h  TestExponentiationSimplifier.h  TestGrammarChecker.c  TestGrammarChecker.h  TestInterpreter.c  TestInterpreter.h  TestMultiplicationSimplifier.c  TestMultiplicationSimplifier.h  TestSolver.c  TestSolver.h  TestTokenizer.c  TestTokenizer.h  main.c
