add_executable(tests ../Unity/src/unity.h
    ../Unity/src/unity.c
    ../src/Tokenizer.c
    ../src/Solver.c
    ../src/GrammarChecker.c
    ../src/simplifier/MultiplicationSimplifier.c
    ../src/simplifier/DivisionSimplifier.c
    ../src/simplifier/ExponentiationSimplifier.c
    ../src/model/Token.h
    ../src/model/TokenType.h
    TestTokenizer.c
    TestTokenizer.h
    main.c
    TestSolver.c
    TestSolver.h
    TestGrammarChecker.c
    TestGrammarChecker.h
    TestMultiplicationSimplifier.c
    TestMultiplicationSimplifier.h
    TestDivisionSimplifier.h
    TestDivisionSimplifier.c
        TestExponentiationSimplifier.h
        TesExponentiationSimplifier.c
)